[end] finishes lab2.

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -1391,8 +1391,8 @@
     "cell_id": "806570623e07479eb9eb68009e97af06",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "end_time": "2023-09-01T01:37:37.226383037Z",
-     "start_time": "2023-09-01T01:37:37.168762193Z"
+     "end_time": "2023-09-01T01:42:04.620370465Z",
+     "start_time": "2023-09-01T01:42:04.598248220Z"
     }
    },
    "source": [
@@ -1416,7 +1416,7 @@
     "        for fruta in nueva_bandeja:\n",
     "            if type(fruta) != dict:\n",
     "                raise Exception(\"Intenta añadir algo que no es una fruta\")\n",
-    "            if fruta.keys() != accepted_keys:\n",
+    "            if list(fruta.keys()) != accepted_keys:\n",
     "                raise Exception(\"Fruta sin formato\")\n",
     "        self._bandeja = nueva_bandeja\n",
     "\n",
@@ -1443,7 +1443,7 @@
     "        return mensaje"
    ],
    "block_group": "806570623e07479eb9eb68009e97af06",
-   "execution_count": 168,
+   "execution_count": 175,
    "outputs": []
   },
   {
@@ -1473,8 +1473,8 @@
     "cell_id": "61fb1b1ad18b4e94a88a959780730c58",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "end_time": "2023-09-01T01:36:50.417131171Z",
-     "start_time": "2023-09-01T01:36:50.068675062Z"
+     "end_time": "2023-09-01T01:42:06.431302345Z",
+     "start_time": "2023-09-01T01:42:06.337392848Z"
     }
    },
    "source": [
@@ -1483,7 +1483,7 @@
     "jugera_2.listar_ingredientes()"
    ],
    "block_group": "61fb1b1ad18b4e94a88a959780730c58",
-   "execution_count": 160,
+   "execution_count": 176,
    "outputs": [
     {
      "name": "stdout",
@@ -1541,8 +1541,8 @@
     "cell_id": "c22db666b01740409ea10d8c65c3f4f0",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "end_time": "2023-09-01T01:36:58.893122891Z",
-     "start_time": "2023-09-01T01:36:58.752738387Z"
+     "end_time": "2023-09-01T01:42:16.486470076Z",
+     "start_time": "2023-09-01T01:42:16.465892834Z"
     }
    },
    "source": [
@@ -1550,7 +1550,7 @@
     "jugera_2.enchufar()"
    ],
    "block_group": "c22db666b01740409ea10d8c65c3f4f0",
-   "execution_count": 163,
+   "execution_count": 179,
    "outputs": []
   },
   {
@@ -1673,8 +1673,8 @@
     "cell_id": "976577e8b66343e38704f8597e85f175",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "end_time": "2023-09-01T01:37:07.147576208Z",
-     "start_time": "2023-09-01T01:37:07.030948980Z"
+     "end_time": "2023-09-01T01:41:09.572299945Z",
+     "start_time": "2023-09-01T01:41:09.520804668Z"
     }
    },
    "source": [
@@ -1683,15 +1683,8 @@
     "jugera_2.bandeja = [{'nombre': 'arándano'}, platano, frutilla]"
    ],
    "block_group": "976577e8b66343e38704f8597e85f175",
-   "execution_count": 167,
+   "execution_count": 170,
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['nombre', 'tipo', 'color', 'pepas']\n"
-     ]
-    },
     {
      "ename": "Exception",
      "evalue": "Fruta sin formato",
@@ -1699,8 +1692,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mException\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[167], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Agregamos algunos ingredientes \u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m# (en este caso debería fallar, ya que arándando tiene solo la llave nombre)\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[43mjugera_2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbandeja\u001B[49m \u001B[38;5;241m=\u001B[39m [{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnombre\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124marándano\u001B[39m\u001B[38;5;124m'\u001B[39m}, platano, frutilla]\n",
-      "Cell \u001B[0;32mIn[162], line 23\u001B[0m, in \u001B[0;36mJugera.bandeja\u001B[0;34m(self, nueva_bandeja)\u001B[0m\n\u001B[1;32m     21\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m fruta\u001B[38;5;241m.\u001B[39mkeys() \u001B[38;5;241m!=\u001B[39m accepted_keys:\n\u001B[1;32m     22\u001B[0m         \u001B[38;5;28mprint\u001B[39m(accepted_keys)\n\u001B[0;32m---> 23\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFruta sin formato\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     24\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_bandeja \u001B[38;5;241m=\u001B[39m nueva_bandeja\n",
+      "Cell \u001B[0;32mIn[170], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Agregamos algunos ingredientes \u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m# (en este caso debería fallar, ya que arándando tiene solo la llave nombre)\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[43mjugera_2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbandeja\u001B[49m \u001B[38;5;241m=\u001B[39m [{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnombre\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124marándano\u001B[39m\u001B[38;5;124m'\u001B[39m}, platano, frutilla]\n",
+      "Cell \u001B[0;32mIn[168], line 22\u001B[0m, in \u001B[0;36mJugera.bandeja\u001B[0;34m(self, nueva_bandeja)\u001B[0m\n\u001B[1;32m     20\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIntenta añadir algo que no es una fruta\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     21\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m fruta\u001B[38;5;241m.\u001B[39mkeys() \u001B[38;5;241m!=\u001B[39m accepted_keys:\n\u001B[0;32m---> 22\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFruta sin formato\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     23\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_bandeja \u001B[38;5;241m=\u001B[39m nueva_bandeja\n",
       "\u001B[0;31mException\u001B[0m: Fruta sin formato"
      ]
     }
@@ -1717,7 +1710,8 @@
     "cell_id": "4403aaea7e044305bb5a8488d71e42f9",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "start_time": "2023-09-01T01:37:07.059803786Z"
+     "end_time": "2023-09-01T01:42:08.593582429Z",
+     "start_time": "2023-09-01T01:42:08.587562063Z"
     }
    },
    "source": [
@@ -1728,8 +1722,16 @@
     "jugera_2.listar_ingredientes()"
    ],
    "block_group": "4403aaea7e044305bb5a8488d71e42f9",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 177,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingredientes en la bandeja:  naranja, plátano, frutilla\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -1742,7 +1744,8 @@
     "cell_id": "4b88a24abdc44fcfb5ea294a852bf921",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "start_time": "2023-09-01T01:37:07.104729389Z"
+     "end_time": "2023-09-01T01:42:18.353883267Z",
+     "start_time": "2023-09-01T01:42:18.337949057Z"
     }
    },
    "source": [
@@ -1751,8 +1754,24 @@
     "jugera_2.preparar_jugo()"
    ],
    "block_group": "4b88a24abdc44fcfb5ea294a852bf921",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 180,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alerta ⚠️: El jugo puede contener restos de pepas.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'Jugo de naranja, plátano, frutilla listo. 🏖️🥤 Que lo disfrutes!!! 🥤🏖️. '"
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ]
   },
   {
    "cell_type": "code",
@@ -1760,7 +1779,8 @@
     "cell_id": "5d8468e21edd4cecab85b9c04df71094",
     "deepnote_cell_type": "code",
     "ExecuteTime": {
-     "start_time": "2023-09-01T01:37:07.104916259Z"
+     "end_time": "2023-09-01T01:42:23.542202386Z",
+     "start_time": "2023-09-01T01:42:23.530971114Z"
     }
    },
    "source": [
@@ -1768,8 +1788,16 @@
     "jugera_2.listar_ingredientes()"
    ],
    "block_group": "5d8468e21edd4cecab85b9c04df71094",
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 181,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bandeja vacia\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1793,19 +1821,19 @@
     "\n",
     "1. ¿Qué es un virtual environment? ¿Para qué sirve? (0.25 ptos)\n",
     "\n",
-    "`Escriba su respuesta acá`\n",
+    "`Es una herramienta para tener instalaciones locales de python con sus propios paquetes instalados. Esto sirve para poder tener distintas combinaciones de paquetes instalados en distintos ambientes, incluso se puede tener varias versiones de python. `\n",
     "\n",
     "2. ¿Qué ventajas puede tener usar un virtual environment? Nombre y explique al menos 2. (0.25 ptos)\n",
     "\n",
-    "`Escriba su respuesta acá`\n",
+    "`Nos permite poder trabajar eficientemente en varios proyectos en donde usemos librerias distintas de manera eficiente. algunas ventajas son que nos facilita pasar la configuracion del ambiente al usar un archivo de requirements.txt y variar la version de python o librerias sin afectar otros proyectos`\n",
     "\n",
     "3. Escriba el comando para crear un virtual environment usando `conda`. ¿Existen otras formas de crear un virtual environment? (0.25 ptos)\n",
     "\n",
-    "`Escriba su respuesta acá`\n",
+    "`El comando es conda create --name myenv. tambien se pueden se pueden crear ambientes virtuales con venv con el comando python -m venv c:\\path\\to\\myenv o con mamba usando un comando similar al de conda`\n",
     "\n",
     "4. ¿De qué forma podemos exportar las librerias instaladas en un virtual environment? Escriba el comando que nos permite realizar esto.  (0.25 ptos)\n",
     "\n",
-    "`Escriba su respuesta acá`"
+    "`Para exportar un ambiente conda lo mas recomendable es usar conda env export > <environment-name>.yml ya que no solo especifica paquetes y versiones si no que indica tambien los canales necesarios. Pero en general tambien se puede usar pip3 freeze > requirements.txt pero este me ha dado mas errores.`"
    ],
    "block_group": "cd08daf60c5042bb8955ddbb82fe8dfd"
   },
